--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,7 +39,9 @@
             <TextBox Name="TextBoxSearch" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Center" Width="500" Height="30"/>
 
             <StackPanel x:Name="offersStackPanel" Grid.Row="1">
+<Border BorderBrush="Black" BorderThickness="2">
                 <Grid x:Name="offersGrid"></Grid>
+<Border>
             </StackPanel>
 
         </Grid>
